[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://Fassets/Golden Age.ttf" type="DynamicFontData" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 26.5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="Player" type="Node"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 512, 574 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( -1.52588e-05, 0 )
scale = Vector2( 0.843751, 0.796875 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="playerCanvas" type="CanvasLayer" parent="Area2D"]

[node name="life_label" type="Label" parent="Area2D/playerCanvas"]
margin_left = 8.0
margin_top = 2.0
margin_right = 154.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
